--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "*"
 pytest-cov = "*"
 pytest-mock = "*"
 pyright = "^1.1.313"
+pytest-snapshot = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
