Fix bug when only main and develop

--- a/.pylintrc
+++ b/.pylintrc
@@ -434,6 +434,7 @@ disable=raw-checker-failed,
         missing-class-docstring,
         missing-module-docstring,
         global-statement,
+        consider-using-f-string,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
