--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ pytest-mock = "*"
 pyright = "^1.1.313"
 pytest-snapshot = "^0.9.0"
 
+[tool.poetry.scripts]
+git-auto-merge = "git_auto_merge:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
