--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ profile = "black"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+packaging = "^23.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
