--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ profile = "black"
 [tool.poetry.dependencies]
 python = "^3.11"
 packaging = "^23.1"
+loguru = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
