--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ profile = "black"
 python = "^3.11"
 packaging = "^23.1"
 loguru = "^0.7.0"
+jsonpickle = "^3.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
