--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ profile = "black"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-packaging = "^23.1"
 loguru = "^0.7.0"
 jsonpickle = "^3.0.1"
 
@@ -26,6 +25,7 @@ pytest-cov = "*"
 pytest-mock = "*"
 pyright = "^1.1.313"
 pytest-snapshot = "^0.9.0"
+safety = "^2.3.5"
 
 [tool.poetry.scripts]
 git-auto-merge = "git_auto_merge:main"
