--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ profile = "black"
 python = "^3.11"
 loguru = "^0.7.0"
 jsonpickle = "^3.0.1"
+click = "^8.1.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -28,7 +29,7 @@ pytest-snapshot = "^0.9.0"
 safety = "^2.3.5"
 
 [tool.poetry.scripts]
-git-auto-merge = "git_auto_merge:main"
+git-auto-merge = "git_auto_merge:cli"
 
 [build-system]
 requires = ["poetry-core"]
