--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "git-auto-merge"
-version = "1.3.0"
+version = "1.3.1"
 description = ""
 authors = ["Clint M <cmodien@gmail.com>"]
 readme = "README.md"
@@ -12,19 +12,20 @@ line_length = 100
 profile = "black"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-loguru = "^0.7.0"
-jsonpickle = "^3.0.1"
 click = "^8.1.6"
+jsonpickle = "^3.0.1"
+loguru = "^0.7.0"
+packaging = "^21"
+python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
 isort = "*"
 pylint = "*"
+pyright = "^1.1.313"
 pytest = "*"
 pytest-cov = "*"
 pytest-mock = "*"
-pyright = "^1.1.313"
 pytest-snapshot = "^0.9.0"
 safety = "^2.3.5"
 
