--- a/.pylintrc
+++ b/.pylintrc
@@ -435,6 +435,7 @@ disable=raw-checker-failed,
         missing-module-docstring,
         global-statement,
         consider-using-f-string,
+        use-dict-literal,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
