--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "git-auto-merge"
-version = "1.3.5"
+version = "1.3.7"
 description = ""
 authors = ["Clint M <cmodien@gmail.com>"]
 readme = "README.md"
@@ -27,7 +27,7 @@ pytest = "*"
 pytest-cov = "*"
 pytest-mock = "*"
 pytest-snapshot = "^0.9.0"
-safety = "^2.3.5"
+safety = "*"
 
 [tool.poetry.scripts]
 git-auto-merge = "git_auto_merge:cli"
